@@ -72,6 +72,8 @@ class Net::SSLeay::SSL_CTX {
   
   native method use_PrivateKey : int ($pkey : Net::SSLeay::EVP_PKEY);
   
+  native method set_session_id_context : int ($sid_ctx : string, $sid_ctx_len : int = -1);
+  
   native method DESTROY : void ();
   
 }
